--- a/HorariosDasTurmas.html
+++ b/HorariosDasTurmas.html
@@ -75,10 +75,9 @@
     </div>
     <div class="footer-basic">
         <footer>
-            <div class="social"><a href="#" style="color: rgb(118,237,124);"><i class="icon ion-social-instagram" style="color: rgb(97,197,102);"></i></a><a href="#" style="color: rgb(97,197,102);"><i class="icon ion-social-snapchat" style="color: rgb(97,197,102);"></i></a>
-                <a
-                    href="#"><i class="icon ion-social-twitter" style="color: rgb(97,197,102);"></i></a><a href="#"><i class="icon ion-social-facebook" style="color: rgb(97,197,102);"></i></a></div>
-            <p class="copyright" style="color: rgb(97,197,102);">Escola Inteligente © 2019</p>
+            <div class="social"><a href="#" style="color: rgb(118,237,124);"><i class="icon ion-social-instagram" style="color: #2b89db;"></i></a><a href="#"><i class="icon ion-social-twitter" style="color: #2b89db;"></i></a><a href="#"><i class="icon ion-social-facebook" style="color: #2b89db;"></i></a></div>
+            <p
+                class="copyright" style="color: #2b89db;">Escola Inteligente - 2019</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
