--- a/MateriaisDidaticos.html
+++ b/MateriaisDidaticos.html
@@ -130,11 +130,11 @@
             </div>
         </div>
     </div>
-   <div class="footer-basic">
+  <div class="footer-basic">
         <footer>
             <div class="social"><a href="#" style="color: rgb(118,237,124);"><i class="icon ion-social-instagram" style="color: #2b89db;"></i></a><a href="#"><i class="icon ion-social-twitter" style="color: #2b89db;"></i></a><a href="#"><i class="icon ion-social-facebook" style="color: #2b89db;"></i></a></div>
             <p
-                class="copyright" style="color: #2b89db;">Escola Inteligente © 2019</p>
+                class="copyright" style="color: #2b89db;">Escola Inteligente - 2019</p>
         </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
